--- a/duomenu-apdorojimas/duomenu-apdorojimas.csproj
+++ b/duomenu-apdorojimas/duomenu-apdorojimas.csproj
@@ -41,8 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GradeCalculator.cs" />
+    <Compile Include="GradeTable.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Student.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
