--- a/duomenu-apdorojimas/duomenu-apdorojimas.csproj
+++ b/duomenu-apdorojimas/duomenu-apdorojimas.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AverageScores.cs" />
     <Compile Include="GradeTable.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
